--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   
   <meta name="theme-color" content="#fafafa">
+
+  <meta name="viewport"
+   content="width=320,
+      height=480,
+      initial-scale=1.0,
+      minimum-scale=1.0,
+      maximum-scale=2.0,
+      user-scalable=yes" />
+
 </head>
 
 <body>
@@ -43,8 +52,10 @@
       </div>
     </div>
   </div>
+
   
   <script src="app.js"></script>
+  
 </body>
 
 </html>
