--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>クイズゲーム</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -26,6 +26,17 @@
 </head>
 
 <body>
+  <h1>問題は全部で３問です。</h1>
+  <style type="text /css">
+    <!--
+      h1 {
+    color: #364e96;/*文字色*/
+    padding: 0.5em 0;/*上下の余白*/
+    border-top: solid 3px #364e96;/*上線*/
+    border-bottom: solid 3px #364e96;/*下線*/
+    }   
+    -->
+      </style>
   
   <div class="container">
     
